--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   flutter_slidable: ^2.0.0
-  smooth_page_indicator: ^1.0.0+2
   provider: ^6.0.4
   lottie: ^1.4.3
   dio: ^4.0.6
@@ -50,6 +49,8 @@ dependencies:
   carousel_slider: ^4.1.1
   google_sign_in: ^5.4.2
   otp_text_field: ^1.1.3
+  razorpay_flutter: ^1.3.4
+  flutter_secure_storage: ^6.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
